--- a/index.html
+++ b/index.html
@@ -6,8 +6,54 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roadmap Project</title>
+    <link rel="icon" type="image/x-icon" href="/images/roadmap.png">
 </head>
 <body>
+<section>
+<header>
+    <hr>
+    <h1>My Name</h1>
+    <h2 style="color:rgb(89, 255, 0)">Junior Frontend Developer</h2>
+    <address>
+        123 Street Name <br>
+        My City, ST 12345 <br>
+        <link rel=""  href="tel:0123456789">+0123456789 <br>
+        <link rel=""  href="mailto:info@example.com">info@example.com <br>
+    </address>
+</header>
+</section>
+<main>
+    <h3 style="color:rgb(89, 255, 0)">Skills</h3>
+    <p>HTML, CSS, JavaScript, Accessebility, Figma to Design, Responsive Web Design, Technical Writing, Presentation</p>
+    <h3 style="color:rgb(89, 255, 0)">Education</h3>
+    <p>School Name, location - Degree<br>
+        Month 20xx to Month 20xx<br>
+    </p>
 
+    <h3 style="color:rgb(89, 255, 0)">Expirience</h3>
+
+    <h4 style="color:rgb(0, 84, 255)">Company Name, Location  - Job Title</h4>
+    <p>Month 20xx to 20xx</p>
+
+    <ul>
+    <li>List of achievments</li>
+    <li>List of achievments</li>
+    <li>List of achievments</li>
+    </ul>
+    <p>Skills: List of skills used or gained at this company</p>
+
+    <h4 style="color:rgb(0, 84, 255)">Company Name, Location  - Job Title</h4>
+    <p>Month 20xx to 20xx</p>
+
+    <ul>
+    <li>List of achievments</li>
+    <li>List of achievments</li>
+    <li>List of achievments</li>
+    </ul>
+
+    <p>Skills: List of Skills or gained at this company</p>
+    <h3 style="color:rgb(89, 255, 0)">Across the internet</h3>
+    <p>Add your LinkedIn, GitHub profile links</p>
+</main>
 </body>
 </html>
