--- a/roadmap-project-01/index.html
+++ b/roadmap-project-01/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roadmap Project</title>
-    <link rel="icon" type="image/x-icon" href="/images/roadmap.png">
+    <link rel="icon" type="x-icon" href="./images/roadmap.png">
 </head>
 <body>
 <section>
@@ -46,14 +46,15 @@
     <p>Month 20xx to 20xx</p>
 
     <ul>
-    <li>List of achievments</li>
-    <li>List of achievments</li>
-    <li>List of achievments</li>
+      <li>List of achievments</li>
+      <li>List of achievments</li>
+      <li>List of achievments</li>
     </ul>
 
     <p>Skills: List of Skills or gained at this company</p>
     <h3 style="color:rgb(89, 255, 0)">Across the internet</h3>
     <p>Add your LinkedIn, GitHub profile links</p>
+    
 </main>
 </body>
 </html>
